--- a/notebooks/Steam_Sales.ipynb
+++ b/notebooks/Steam_Sales.ipynb
@@ -6748,17 +6748,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
+      "sagemaker.config INFO - Not applying SDK defaults from location: C:\\ProgramData\\sagemaker\\sagemaker\\config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: C:\\Users\\RaviB\\AppData\\Local\\sagemaker\\sagemaker\\config.yaml\n"
      ]
     }
    ],
@@ -6776,6 +6774,7 @@
     "from pathlib import Path\n",
     "\n",
     "CODE_FOLDER = Path(\"code\")\n",
+    "MLFLOW_FOLDER = Path(\"mlruns\")\n",
     "sys.path.extend([f\"./{CODE_FOLDER}\"])\n",
     "\n",
     "DATA_FILEPATH = \"../data/raw_data_2014-2017.csv\"\n",
@@ -6792,12 +6791,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "bucket = os.environ[\"BUCKET\"]\n",
     "role = os.environ[\"ROLE\"]\n",
+    "\n",
+    "mlflow_experiment_name = os.environ[\"MLFLOW_EXPERIMENT_NAME\"]\n",
     "\n",
     "S3_LOCATION = f\"s3://{bucket}/price_history\"\n",
     "\n",
@@ -6816,34 +6817,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(CODE_FOLDER / \"preprocessing\").mkdir(parents=True, exist_ok=True)\n",
+    "(CODE_FOLDER / \"processing\").mkdir(parents=True, exist_ok=True)\n",
     "sys.path.extend([f\"./{CODE_FOLDER}/processing\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting code/preprocessing/preprocessing_script.py\n"
+      "Overwriting code/processing/preprocessing_script.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile {CODE_FOLDER}/preprocessing/preprocessing_script.py\n",
+    "%%writefile {CODE_FOLDER}/processing/preprocessing_script.py\n",
     "# | filename: preprocessing_script.py\n",
     "# | code-line-numbers: true\n",
     "\n",
     "import ast\n",
-    "import Path\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import Counter\n",
@@ -6963,7 +6964,7 @@
     "    test = np.concatenate((X_test, y_test), axis=1)\n",
     "\n",
     "    train_path = Path(base_directory) / train_path_name\n",
-    "    test_path = Path(base_directory) / train_path_name\n",
+    "    test_path = Path(base_directory) / test_path_name\n",
     "\n",
     "    train_path.mkdir(parents=True, exist_ok=True)\n",
     "    test_path.mkdir(parents=True, exist_ok=True)\n",
@@ -7015,7 +7016,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    preprocess(base_directory=\"/opt/ml/preprocessing\")"
+    "    preprocess(base_directory=\"/opt/ml/processing\")"
    ]
   },
   {
@@ -7027,7 +7028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7038,7 +7039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7062,32 +7063,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.7.1'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check what version we are using\n",
+    "xgb.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sagemaker.workflow.pipeline_context import LocalPipelineSession, PipelineSession\n",
+    "import xgboost as xgb\n",
     "\n",
     "pipeline_session = PipelineSession(default_bucket=bucket)\n",
     "\n",
     "config = {\n",
     "    \"session\": pipeline_session,\n",
-    "    \"instance_type\": \"ml.t3.medium\",\n",
-    "    #\"instance_type\": \"ml.m5.xlarge\",\n",
+    "    #\"instance_type\": \"ml.t3.medium\",\n",
+    "    \"instance_type\": \"ml.m5.xlarge\",\n",
     "    \"image\": None,\n",
     "}\n",
     "\n",
     "# These specific settings refer to the SageMaker\n",
-    "# TensorFlow container we'll use.\n",
-    "config[\"framework_version\"] = \"2.12\"\n",
-    "config[\"py_version\"] = \"py310\""
+    "# xgboost container we'll use, for some reason the version uses a dash\n",
+    "config[\"framework_version\"] = \"1.7-1\"\n",
+    "config[\"py_version\"] = \"py3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker.image_uris:Defaulting to only available Python version: py3\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.sklearn.processing import SKLearnProcessor\n",
     "\n",
@@ -7110,7 +7141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7120,7 +7151,7 @@
     "preprocessing_step = ProcessingStep(\n",
     "    name=\"preprocess-data\",\n",
     "    step_args=processor.run(\n",
-    "        code=f\"{(CODE_FOLDER / 'preprocessing' / 'preprocessing_script.py').as_posix()}\",\n",
+    "        code=f\"{(CODE_FOLDER / 'processing' / 'preprocessing_script.py').as_posix()}\",\n",
     "        inputs=[\n",
     "            ProcessingInput(\n",
     "                source=dataset_location,\n",
@@ -7130,22 +7161,22 @@
     "        outputs=[\n",
     "            ProcessingOutput(\n",
     "                output_name=\"train_clf\",\n",
-    "                source=\"/opt/ml/preprocessing/train_clf\",\n",
+    "                source=\"/opt/ml/processing/train_clf\",\n",
     "                destination=f\"{S3_LOCATION}/preprocessing/train_clf\",\n",
     "            ),\n",
     "            ProcessingOutput(\n",
     "                output_name=\"test_clf\",\n",
-    "                source=\"/opt/ml/preprocessing/test_clf\",\n",
+    "                source=\"/opt/ml/processing/test_clf\",\n",
     "                destination=f\"{S3_LOCATION}/preprocessing/test_clf\",\n",
     "            ),\n",
     "            ProcessingOutput(\n",
     "                output_name=\"train_reg\",\n",
-    "                source=\"/opt/ml/preprocessing/train_reg\",\n",
+    "                source=\"/opt/ml/processing/train_reg\",\n",
     "                destination=f\"{S3_LOCATION}/preprocessing/train_reg\",\n",
     "            ),\n",
     "            ProcessingOutput(\n",
     "                output_name=\"test_reg\",\n",
-    "                source=\"/opt/ml/preprocessing/test_reg\",\n",
+    "                source=\"/opt/ml/processing/test_reg\",\n",
     "                destination=f\"{S3_LOCATION}/preprocessing/test_reg\",\n",
     "            ),\n",
     "        ],\n",
@@ -7163,23 +7194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:590184030535:pipeline/preprocessing-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '5b606cb4-d04c-463c-baa1-13db9aadfcf8',\n",
+       " 'ResponseMetadata': {'RequestId': '82fefee3-072d-4630-8e46-902beae44cbe',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '5b606cb4-d04c-463c-baa1-13db9aadfcf8',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '82fefee3-072d-4630-8e46-902beae44cbe',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '90',\n",
-       "   'date': 'Tue, 28 May 2024 14:21:58 GMT'},\n",
+       "   'date': 'Thu, 30 May 2024 01:03:39 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7187,7 +7218,7 @@
    "source": [
     "from sagemaker.workflow.pipeline import Pipeline\n",
     "\n",
-    "session3_pipeline = Pipeline(\n",
+    "preprocessing_pipeline = Pipeline(\n",
     "    name=\"preprocessing-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
@@ -7197,7 +7228,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "session3_pipeline.upsert(role_arn=role)"
+    "preprocessing_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -7209,7 +7240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7219,7 +7250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -7419,33 +7450,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'session': <sagemaker.workflow.pipeline_context.PipelineSession at 0x26688862860>,\n",
-       " 'instance_type': 'ml.t3.medium',\n",
-       " 'image': None,\n",
-       " 'framework_version': '2.12',\n",
-       " 'py_version': 'py310'}"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker.image_uris:Ignoring unnecessary Python version: py3.\n",
+      "INFO:sagemaker.image_uris:Ignoring unnecessary instance type: ml.m5.xlarge.\n"
+     ]
     }
    ],
-   "source": [
-    "config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from sagemaker.inputs import TrainingInput\n",
     "from sagemaker.workflow.steps import TrainingStep\n",
@@ -7456,12 +7472,12 @@
     "    source_dir=f\"{(CODE_FOLDER / 'training').as_posix()}\",\n",
     "    hyperparameters={\n",
     "        \"objective\": \"binary:logistic\",\n",
-    "        \"learning_rate\"=0.1,\n",
-    "        \"max_depth\"=3\n",
+    "        \"learning_rate\": 0.1,\n",
+    "        \"max_depth\": 3\n",
     "    },\n",
     "    environment={\n",
-    "        \"MLFLOW_TRACKING_URI\": MLFLOW_TRACKING_URI,\n",
-    "        \"MLFLOW_EXPERIMENT_NAME\": MLFLOW_EXPERIMENT_NAME,\n",
+    "        \"MLFLOW_TRACKING_URI\": f\"{MLFLOW_FOLDER}\",\n",
+    "        \"MLFLOW_EXPERIMENT_NAME\": mlflow_experiment_name,\n",
     "    },\n",
     "    framework_version=config[\"framework_version\"],\n",
     "    py_version=config[\"py_version\"],\n",
@@ -7471,6 +7487,129 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_training_step(estimator):\n",
+    "    \"\"\"Create a SageMaker TrainingStep using the provided estimator.\"\"\"\n",
+    "    return TrainingStep(\n",
+    "        name=\"train-model\",\n",
+    "        step_args=estimator.fit(\n",
+    "            inputs={\n",
+    "                \"train_clf\": TrainingInput(\n",
+    "                    s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\n",
+    "                        \"train_clf\"\n",
+    "                    ].S3Output.S3Uri,\n",
+    "                    content_type=\"text/csv\",\n",
+    "                ),\n",
+    "                \"test_clf\": TrainingInput(\n",
+    "                    s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\n",
+    "                        \"test_clf\"\n",
+    "                    ].S3Output.S3Uri,\n",
+    "                    content_type=\"text/csv\",\n",
+    "                ),\n",
+    "                \"train_reg\": TrainingInput(\n",
+    "                    s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\n",
+    "                        \"train_reg\"\n",
+    "                    ].S3Output.S3Uri,\n",
+    "                    content_type=\"text/csv\",\n",
+    "                ),\n",
+    "                \"test_reg\": TrainingInput(\n",
+    "                    s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\n",
+    "                        \"test_reg\"\n",
+    "                    ].S3Output.S3Uri,\n",
+    "                    content_type=\"text/csv\",\n",
+    "                ),\n",
+    "            },\n",
+    "        ),\n",
+    "        cache_config=cache_config,\n",
+    "    )\n",
+    "\n",
+    "train_model_step = create_training_step(estimator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:590184030535:pipeline/train-pipeline',\n",
+       " 'ResponseMetadata': {'RequestId': 'f502f2d0-fa49-4a6c-8679-474372c78179',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'f502f2d0-fa49-4a6c-8679-474372c78179',\n",
+       "   'content-type': 'application/x-amz-json-1.1',\n",
+       "   'content-length': '82',\n",
+       "   'date': 'Wed, 29 May 2024 13:37:32 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_pipeline = Pipeline(\n",
+    "    name=\"train-pipeline\",\n",
+    "    parameters=[dataset_location],\n",
+    "    steps=[\n",
+    "        preprocessing_step,\n",
+    "        train_model_step,\n",
+    "    ],\n",
+    "    pipeline_definition_config=pipeline_definition_config,\n",
+    "    sagemaker_session=config[\"session\"],\n",
+    ")\n",
+    "\n",
+    "train_pipeline.upsert(role_arn=role)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running a Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:590184030535:pipeline/preprocessing-pipeline/execution/6l2fn0ng7bys', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x000001907817BF10>)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing_pipeline.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
